--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "dependencies": {
     "express": "^4.15.3",
     "gulp-cli": "^1.3.0",
+    "page": "^1.7.1",
     "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "rename": "^1.0.4",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
